[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Background/Mountains1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Background/Mountains2.png" type="Texture" id=2]
[ext_resource path="res://YetiScenes/TitleMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/GUI/ButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Sprites/GUI/Button.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Background/Mountain4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Background/MountainsBig.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Background/Mountain3.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Downhill.mp3" type="AudioStream" id=9]
[ext_resource path="res://Sounds/SoundDesign - Select UI.wav" type="AudioStream" id=10]
[ext_resource path="res://Sprites/GUI/YetiSlopes.png" type="Texture" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 151.547, 105.403 )
scale = Vector2( 1.04, 1.04 )
transform = Transform2D( 1.04, 0, 0, 1.04, 151.547, 105.403 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
scale = Vector2( 1, 2.913 )
texture = ExtResource( 6 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 8 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.939
anchor_right = 0.5
anchor_bottom = 0.96
margin_left = -45.0
margin_top = -27.0
margin_right = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CenterContainer"]
margin_left = 13.0
margin_right = 76.0
margin_bottom = 31.5
rect_min_size = Vector2( 63, 31.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Sounds" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="Button" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -146.53
margin_top = 23.3513
margin_right = -107.53
margin_bottom = 42.3513
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="CenterContainer/TextureButton" to="." method="_on_TextureButton_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
